# fal-teller

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
scripts/: demo.py  prepare_token_db.py  serve.py
src/fal_teller/client/: __init__.py  _client.py
src/fal_teller/server/: __init__.py  _ddl.py  _providers.py  _server.py
src/fal_teller/server/providers/: __init__.py  _ddl.py  base.py  file.py  registry.py  snowflake.py
tests/: test_fal_teller.py
