[tool.poetry]
name = "fal-teller"
version = "0.1.0"
description = ""
authors = ["Batuhan Taskaya <isidentical@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyarrow = "^8"
fsspec = { version = "*", optional = true }
snowflake-connector-python = { version = "^2.8", optional = true }
importlib-metadata = "^5.0.0"


[tool.poetry.extras]
file = ["fsspec"]
snowflake = ["snowflake-connector-python"]


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
multi_line_output=3
use_parentheses=true

[tool.poetry.plugins."fal_teller.server.providers"]
"file" = "fal_teller.server.providers.file:FileProvider"
"snowflake" = "fal_teller.server.providers.snowflake:SnowflakeProvider"
